# Tangello_Music

./: Cargo.toml  README.md  sorter
src/: graphical.rs  main.rs
src/graphical/: confirm.rs  data.rs  fonts.rs  footer.rs  library.rs  mod.rs  playlist.rs  playlistadd.rs  queue.rs  settings.rs  sidebar.rs  top_panel.rs
src/mpd/: changeimage.rs  mod.rs  songchange.rs
